CREATE TABLE CLIENTE(
	COD_CLIENTE SERIAL PRIMARY KEY,
	NOME VARCHAR(50) NOT NULL
);

CREATE TABLE FUNCIONARIO(
	COD_FUNC SERIAL PRIMARY KEY,
	NOME VARCHAR(50) NOT NULL
);

CREATE TABLE CUPOM(
	COD_CUPOM SERIAL PRIMARY KEY,
	DESCONTO INT NOT NULL CHECK(DESCONTO BETWEEN 0 AND 100),
	USOS_RESTANTES INT NOT NULL CHECK(USOS_RESTANTES >= 0),
	DESCRICAO TEXT NOT NULL
);

CREATE TABLE CATEGORIA(
	COD_CAT SERIAL PRIMARY KEY,
	NOME TEXT NOT NULL
);

CREATE TABLE FORNECEDOR(
	COD_FORNECEDOR SERIAL PRIMARY KEY,
	CNPJ VARCHAR(18) NOT NULL UNIQUE,
    RAZAO_SOCIAL VARCHAR(50) NOT NULL UNIQUE,
    EMAIL VARCHAR(100) NOT NULL UNIQUE
);

CREATE TABLE PRODUTO(
	COD_PRODUTO SERIAL PRIMARY KEY,
	COD_FORNECEDOR INT NOT NULL,
	COD_CAT INT NOT NULL,
	NOME VARCHAR(50) NOT NULL,
	PRECO_UNIT FLOAT NOT NULL,
	ESTOQUE INT NOT NULL CHECK(ESTOQUE > 0),

	FOREIGN KEY (COD_FORNECEDOR) REFERENCES FORNECEDOR(COD_FORNECEDOR),
	FOREIGN KEY (COD_CAT) REFERENCES CATEGORIA(COD_CAT)
);

CREATE TABLE PEDIDO(
	COD_PEDIDO SERIAL PRIMARY KEY,
	COD_CLIENTE INT NOT NULL,
	COD_FUNC INT NOT NULL,
	COD_CUPOM INT,
	VALOR_TOTAL FLOAT NOT NULL DEFAULT 0,
	VALOR_FINAL FLOAT NOT NULL DEFAULT 0,

	FOREIGN KEY (COD_CUPOM) REFERENCES CUPOM(COD_CUPOM),
	FOREIGN KEY (COD_FUNC) REFERENCES FUNCIONARIO(COD_FUNC),
	FOREIGN KEY (COD_CLIENTE) REFERENCES CLIENTE(COD_CLIENTE)
);

CREATE TABLE AVALIACAO(
	COD_AVALIACAO SERIAL PRIMARY KEY,
	COD_PEDIDO INT NOT NULL,
	COD_CLIENTE INT NOT NULL,
	NOTA INT NOT NULL,
	COMENTARIO TEXT,

	FOREIGN KEY (COD_PEDIDO) REFERENCES PEDIDO(COD_PEDIDO),
	FOREIGN KEY (COD_CLIENTE) REFERENCES CLIENTE(COD_CLIENTE)
);

CREATE TABLE ITEM(
	COD_ITEM SERIAL PRIMARY KEY,
	COD_PEDIDO INT NOT NULL,
	COD_PRODUTO INT NOT NULL,
	QUANTIDADE INT NOT NULL,
	
	FOREIGN KEY (COD_PRODUTO) REFERENCES PRODUTO(COD_PRODUTO),
	FOREIGN KEY (COD_PEDIDO) REFERENCES PEDIDO(COD_PEDIDO)
)
